<resources>
    <!-- App Name & Main Navigation -->
    <string name="app_name">BookLub</string>
    <string name="title_home">Quotes</string>
    <string name="title_books">Books</string>
    <string name="title_aim">Goals</string>
    <string name="title_settings">Settings</string>
    <string name="title_wish">Wishes</string>

    <!-- Book Related -->
    <string name="book_name">Title</string>
    <string name="author">Author</string>
    <string name="book">Book</string>
    <string name="genre">Genre</string>
    <string name="genre_">Genre:</string>
    <string name="series">Series</string>
    <string name="series_">Series:</string>
    <string name="description">Description</string>
    <string name="short_description">Description</string>
    <string name="note">Opinion</string>
    <string name="title_note">Opinion</string>
    <string name="finish_date">Finish Date</string>

    <!-- Categories -->
    <string name="category_all">All</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_finished">Finished</string>
    <string name="all">All</string>
    <string name="finished_books">Finished</string>
    <string name="favorite_books">Favorites</string>

    <!-- Actions -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="cansel">Back</string>
    <string name="title_delete">Delete</string>
    <string name="like">Like</string>
    <string name="finished">Finished</string>
    <string name="send">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share</string>
    <string name="contact_us">Contact Us</string>

    <!-- Feedback & Email -->
    <string name="user_name">Your Name</string>
    <string name="message">Message</string>
    <string name="email_subject">Feedback</string>
    <string name="contact_email">zeonassistant@gmail.com</string>
    <string name="choose_email_app">Choose email app</string>
    <string name="no_email_app">No email app found</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_message">Please enter a message</string>
    <string name="best_regards">Best regards,</string>
    <string name="no_app_to_open_link">No app found to open the link</string>
    <string name="no_app_to_share">No app found to share</string>
    <string name="cant_open_feedback">Could not open feedback form</string>
    <string name="attach_device_info">Attach device information to the letter</string>

    <!-- Quotes -->
    <string name="quote">Quote</string>
    <string name="quote_added">Quote added</string>
    <string name="fill_quote_and_author">Fill in the quote and author</string>

    <!-- Statistics & Sharing -->
    <string name="statistics_for_year">Statistics for %d year</string>
    <string name="share_via">Share via</string>
    <string name="books_finished">books finished</string>

    <!-- Messages & Dialogs -->
    <string name="add_book">Add book</string>
    <string name="error_adding_record">Error adding record</string>
    <string name="error_updating_record">Error updating record</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="error_deleting">Error deleting</string>
    <string name="delete_book_confirm">Delete book?</string>
    <string name="delete_quote_confirm">Delete quote?</string>
    <string name="book_added_to_favorites">Book added to favorites</string>
    <string name="book_removed_from_favorites">Book removed from favorites</string>
    <string name="book_not_finished">Book not finished</string>
    <string name="set_reading_date">Set the book reading date.</string>
    <string name="empty_books_message">You haven\'t added any books yet :(</string>
    <string name="empty_quotes_message">You haven\'t added any quotes yet :(</string>
    <string name="book_finished">Book finished</string>
    <string name="date_required_for_statistics">Setting the date is necessary to display statistics for books read.</string>
</resources>