<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_finished"
        android:title="@string/finished"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_not_like"
        android:title="@string/like"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/title_delete"
        app:showAsAction="always" />
</menu>