<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activities.AddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/book_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/author">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:hint="@string/genre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputGenre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:hint="@string/series">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputSeries"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/short_description"
                android:lines="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shortDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/note">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/card_horizontal_margin"
                    android:layout_marginEnd="@dimen/card_horizontal_margin"
                    android:layout_marginBottom="@dimen/card_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/cansel"
                    app:backgroundTint="@color/purple_200"
                    app:cornerRadius="@dimen/radius"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/card_horizontal_margin"
                    android:layout_marginEnd="@dimen/card_horizontal_margin"
                    android:layout_marginBottom="@dimen/card_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/add"
                    app:backgroundTint="@color/purple_200"
                    app:cornerRadius="@dimen/radius"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:text="@string/update"
                    android:visibility="gone"
                    app:backgroundTint="@color/purple_200"
                    app:cornerRadius="@dimen/radius"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>