<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragments.BooksFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_horizontal_margin"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/card_horizontal_margin"
        android:backgroundTint="@color/item_background"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btnAll"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:width="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:width="1dp"
                    android:gravity="center|start"
                    android:paddingStart="32sp"
                    android:text="@string/all" />

                <TextView
                    android:id="@+id/allScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:paddingEnd="32dp"
                    android:text="0" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/view_margin"
                android:layout_marginEnd="@dimen/view_margin"
                android:background="@color/text" />

            <LinearLayout
                android:id="@+id/btnFinished"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:width="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="32sp"
                    android:text="@string/finished" />

                <TextView
                    android:id="@+id/finishScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:paddingEnd="32dp"
                    android:text="0" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/view_margin"
                android:layout_marginEnd="@dimen/view_margin"
                android:background="@color/text" />

            <LinearLayout
                android:id="@+id/btnFavorite"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:width="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="32sp"
                    android:text="@string/favorite_books" />

                <TextView
                    android:id="@+id/favoriteScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:paddingEnd="32dp"
                    android:text="0" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_horizontal_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/card_horizontal_margin"
        android:backgroundTint="@color/item_background"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btnAuthor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:width="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="32sp"
                    android:text="@string/author" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/view_margin"
                android:layout_marginEnd="@dimen/view_margin"
                android:background="@color/text" />

            <LinearLayout
                android:id="@+id/btnSeries"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:width="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:width="1dp"
                    android:gravity="center|start"
                    android:paddingStart="32sp"
                    android:text="@string/series" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/view_margin"
                android:layout_marginEnd="@dimen/view_margin"
                android:background="@color/text" />

            <LinearLayout
                android:id="@+id/btnGenre"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:width="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="32sp"
                    android:text="@string/genre" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>